app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--fg-color: rgb(5, 5, 5);
	--bg-color: whitesmoke;
}

@media (prefers-color-scheme: dark) {
	:root {
		--fg-color: whitesmoke;
		--bg-color: rgb(5, 5, 5);
	}
}

body {
	user-select: none;
}

body,
main {
	color: var(--fg-color);
	background-color: var(--bg-color);
	scrollbar-width: thin;
	scrollbar-color: grey var(--bg-color);
}

@layer utilities {
	.content-wrap {
		@apply py-16 h-dvh box-border;
	}

	.t-a-3-ease-out {
		@apply transition-all duration-300 ease-out;
	}

	.tracking {
		@apply tracking-wide hover:tracking-[.25em];
	}

	.navbar-link {
		@apply text-[var(--fg-color)] t-a-3-ease-out hover:tracking-[.25em];
	}

	.hover-invert {
		@apply hover:bg-[var(--fg-color)] hover:text-[var(--bg-color)];
	}
}

